--- a/{{ cookiecutter.project_slug }}/provisioning/environments/dev/inventory.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/dev/inventory.yml
@@ -6,9 +6,9 @@ all:
     # for the hosts in this environment via the "vagrant-hostmanager" plugin. So, we
     # only need to configure the appropriate ssh key for each host.
     {{ cookiecutter.dev_vm_hostname }}:
-      ansible_ssh_private_key_file: "/vagrant/.vagrant/machines/dev/virtualbox/private_key"
+      ansible_ssh_private_key_file: "/vagrant_machines/dev/virtualbox/private_key"
     {{ cookiecutter.db_vm_hostname }}:
-      ansible_ssh_private_key_file: "/vagrant/.vagrant/machines/db/virtualbox/private_key"
+      ansible_ssh_private_key_file: "/vagrant_machines/db/virtualbox/private_key"
   children:
     backend:
       hosts:
