Run unit tests with coverage.

--- a/{{ cookiecutter.project_slug }}/backend_app/Makefile
+++ b/{{ cookiecutter.project_slug }}/backend_app/Makefile
@@ -2,7 +2,10 @@
 ACTIVATE_VENV=. venv/bin/activate
 
 test:
-	$(ACTIVATE_VENV) && python manage.py test
+	$(ACTIVATE_VENV) && coverage run --source='.' manage.py test
+	$(ACTIVATE_VENV) && coverage html
+	@echo Coverage html report written to coverage_html_report/index.html
+	$(ACTIVATE_VENV) && coverage erase
 
 format:
 	$(ACTIVATE_VENV) && black --config pyproject.toml .
