Expose port 8000 for the django dev server in the dev environment.

--- a/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/backend/vars.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/backend/vars.yml
@@ -13,4 +13,10 @@ backend_app_allowed_hosts:
   - "localhost"
   - "127.0.0.1"
   - "{{ backend_server_name }}"
+
+# Ensure the django dev server is accessible
+firewalld_additional_rules:
+  - port: "8000/tcp"
+    state: "enabled"
+    zone: "public"
 {% endraw %}
