--- a/{{ cookiecutter.project_slug }}/provisioning/vars/backend_app.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/vars/backend_app.yml
@@ -5,4 +5,8 @@ backend_app_database_user: "{{ database_user }}"
 backend_app_database_password: "{{ database_password }}"
 backend_app_static_root: "{{ static_root }}"
 backend_app_systemd_runtime_dir: "{{ systemd_backend_runtime_dir }}"
+backend_app_allowed_hosts:
+  - "localhost"
+  - "127.0.0.1"
+  - "{{ backend_server_name }}"
 {% endraw %}
