--- a/{{ cookiecutter.project_slug }}/provisioning/ansible-vagrant.cfg
+++ b/{{ cookiecutter.project_slug }}/provisioning/ansible-vagrant.cfg
@@ -3,6 +3,7 @@ host_key_checking = no
 roles_path = galaxy_roles:roles
 callback_whitelist = timer, profile_roles
 stdout_callback = debug
+force_color = yes
 
 [ssh_connection]
 pipelining = True
