--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -36,6 +36,18 @@ Vagrant.configure("2") do |config|
       type: "virtualbox",
       mount_options: ["uid=1234", "gid=1234"]
     )
+
+    machine.trigger.after :up do |trigger|
+      trigger.name = "Mount venv directory"
+      # Ensure that the 'venv' folder is mounted after vagrant has configured its
+      # mounts if running 'vagrant up' without re-provisioning  (ie instead of
+      # 'vagrant up --provision'). This mount command would fail on an initial
+      # 'vagrant up' without || true since this trigger is executed after 'up'
+      # but  *before* the ansible provisioning is run, and the entry to
+      # /etc/fstab is added via ansible.
+      trigger.run_remote = {inline: "sudo mount /opt/{{ cookiecutter.project_slug }}_backend/current/venv &> /dev/null || true"}
+    end
+
     machine.vm.network "private_network", ip: "172.17.177.21"
     machine.vm.provider "virtualbox" do |virtualbox|
       virtualbox.name = "{{ cookiecutter.project_slug }}_dev"
@@ -90,7 +102,7 @@ Vagrant.configure("2") do |config|
       ansible.pip_install_cmd = "sudo yum install -y epel-release && sudo yum install -y python2-pip"
       ansible.pip_args = "-r /provisioning/requirements.txt"
       ansible.galaxy_role_file = "requirements.yml"
-      ansible.galaxy_command = "ansible-galaxy install --role-file=%{role_file} --force"
+      ansible.galaxy_command = "ansible-galaxy install --role-file=%{role_file}"
       ansible.verbose = false
       ansible.limit = "all"
       ansible.inventory_path = "environments/dev/inventory.yml"
