Add CREATEDB permission to postgres user.

--- a/{{ cookiecutter.project_slug }}/provisioning/vars/postgresql.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/vars/postgresql.yml
@@ -10,4 +10,5 @@ postgresql_databases:
 postgresql_users:
   - name: "{{ database_user }}"
     password: "{{ database_password }}"
+    role_attr_flags: CREATEDB
 {% endraw %}
