--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/install_selenium_dependencies.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/install_selenium_dependencies.yml
@@ -5,7 +5,7 @@
     name:
       - firefox
       - xorg-x11-xauth
-      - xorg-x11-utils
+      - xorg-x11-apps
     state: present
 
 - name: stat geckodriver
