--- a/{{ cookiecutter.project_slug }}/provisioning/vars/backend.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/vars/backend.yml
@@ -1,5 +1,19 @@
 ---
 {% raw %}
+backend_app_database_name: "{{ database_name }}"
+backend_app_database_user: "{{ database_user }}"
+backend_app_database_password: "{{ database_password }}"
+backend_app_static_root: "{{ static_root }}"
+backend_app_systemd_runtime_dir: "{{ systemd_backend_runtime_dir }}"
+backend_app_allowed_hosts:
+  - "localhost"
+  - "127.0.0.1"
+  - "{{ backend_server_name }}"
+
+ssl_common_name: "{{ backend_server_name }}"
+ssl_private_key_name: "backend_app.pem"
+ssl_certificate_name: "backend_app.crt"
+
 nginx_remove_default_vhost: yes
 
 nginx_upstreams:
@@ -32,4 +46,5 @@ nginx_vhosts:
       location /static {
           alias {{ static_root }};
       }
+
 {% endraw %}
