--- a/{{ cookiecutter.project_slug }}/provisioning/vars/backend.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/vars/backend.yml
@@ -23,18 +23,33 @@ nginx_upstreams:
       - "127.0.0.1:8080 fail_timeout=0"
 
 nginx_vhosts:
+  - listen: "80 default_server"
+    server_name: "{{ backend_server_name }}"
+    return: 301 https://$server_name$request_uri
+    filename: "ssl_redirect.conf"
+
   # catch-all configuration to validate the 'Host' HTTP header. A request which does
   # not match the specified 'server_name' will be returned a 404 response. See
   # https://docs.djangoproject.com/en/2.2/howto/deployment/checklist/#allowed-hosts
   # for more.
-  - listen: "80 default_server"
+  - listen: "443 ssl default_server"
     server_name: "_"
     return: "404"
-  - listen: "80"
+    filename: "ssl_catchall.conf"
+    extra_parameters: |
+      ssl_certificate /etc/pki/tls/certs/{{ ssl_certificate_name }};
+      ssl_certificate_key /etc/pki/tls/private/{{ ssl_private_key_name }};
+
+  - listen: "443 ssl"
     server_name: "{{ backend_server_name }}"
-    state: "present"
     filename: "backend_app.conf"
     extra_parameters: |
+      ssl_certificate /etc/pki/tls/certs/{{ ssl_certificate_name }};
+      ssl_certificate_key /etc/pki/tls/private/{{ ssl_private_key_name }};
+      ssl_protocols TLSv1.2 TLSv1.3;
+      ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+      ssl_prefer_server_ciphers off;
+
       location / {
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header X-Forwarded-Proto $scheme;
