--- a/{{ cookiecutter.project_slug }}/provisioning/roles/postgresql/tasks/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/postgresql/tasks/main.yml
@@ -1,9 +1,7 @@
 ---
 
-- name: install postgresql repo rpm
-  yum:
-    name: "https://download.postgresql.org/pub/repos/yum/reporpms/EL-7-x86_64/pgdg-redhat-repo-latest.noarch.rpm"
-    state: present
+- include_tasks: setup-RedHat.yml
+  when: ansible_os_family == 'RedHat'
 
 - import_role:
     name: geerlingguy.postgresql
