--- a/{{ cookiecutter.project_slug }}/provisioning/roles/ssl/vars/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/ssl/vars/main.yml
@@ -1,5 +1,5 @@
 ---
 {% raw %}
-ssl_private_key_path: "/etc/pki/tls/private/{{ ssl_private_key_name }}"
-ssl_certificate_path: "/etc/pki/tls/certs/{{ ssl_certificate_name }}"
+ssl_private_key_dest: "/etc/pki/tls/private/{{ ssl_private_key_name }}"
+ssl_certificate_dest: "/etc/pki/tls/certs/{{ ssl_certificate_name }}"
 {% endraw %}
