--- a/{{ cookiecutter.project_slug }}/provisioning/vars/backend.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/vars/backend.yml
@@ -44,8 +44,13 @@ nginx_vhosts:
     server_name: "{{ backend_server_name }}"
     filename: "backend_app.conf"
     extra_parameters: |
+      # Configuration based on the Mozilla SSL configuration tool at
+      # https://ssl-config.mozilla.org/#server=nginx&server-version=1.16.1&config=intermediate
       ssl_certificate /etc/pki/tls/certs/{{ ssl_certificate_name }};
       ssl_certificate_key /etc/pki/tls/private/{{ ssl_private_key_name }};
+      ssl_session_timeout 1d;
+      ssl_session_cache shared:BackendAppSSL:10m;  # about 40000 sessions
+      ssl_session_tickets off;
       ssl_protocols TLSv1.2 TLSv1.3;
       ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
       ssl_prefer_server_ciphers off;
