--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -6,6 +6,15 @@ sudo mount /opt/{{ cookiecutter.project_slug }}_backend/current/venv &> /dev/nul
 sudo systemctl restart {{ cookiecutter.project_slug }} &> /dev/null || true
 SCRIPT
 
+$controller_vm_setup_script = <<-SCRIPT
+sudo yum install -y epel-release
+sudo yum install -y python36 python36-pip python36-devel sshpass
+# Vagrant doesn't allow us to specify which version of pip/python is used to
+# install our provisioning requirements when using the 'ansible_local'
+# provisioner, so we set the system default to Python 3.
+sudo alternatives --install /usr/bin/pip pip /usr/bin/pip3.6 1
+SCRIPT
+
 Vagrant.require_version ">= 2.2.5"
 
 Vagrant.configure("2") do |config|
@@ -94,7 +103,7 @@ Vagrant.configure("2") do |config|
   # which increases the system resources used for this dev environment.
   config.vm.define "controller" do |machine|
     machine.vm.network "private_network", ip: "172.17.177.20"
-    machine.vm.synced_folder "./provisioning", "/provisioning", type: "virtualbox"
+    machine.vm.synced_folder "./", "/vagrant", type: "virtualbox"
     # Mount the folder containing the dev vm ssh keys with explicit file
     # permissions. This addresses 'unprotected private key file' errors on
     # Windows, due to mounts on Windows having 777 file permissions by default.
@@ -109,14 +118,16 @@ Vagrant.configure("2") do |config|
       virtualbox.name = "{{ cookiecutter.project_slug }}_controller"
       virtualbox.memory = 256
     end
+
+    machine.vm.provision "shell", inline: $controller_vm_setup_script
+
     machine.vm.provision "ansible_local" do |ansible|
       ansible.compatibility_mode = "2.0"
       ansible.playbook = "playbook.yml"
-      ansible.provisioning_path = "/provisioning"
+      ansible.provisioning_path = "/vagrant/provisioning"
       ansible.config_file = "ansible-vagrant.cfg"
       ansible.install_mode = "pip_args_only"
-      ansible.pip_install_cmd = "sudo yum install -y epel-release && sudo yum install -y python2-pip"
-      ansible.pip_args = "-r /provisioning/requirements.txt"
+      ansible.pip_args = "-r /vagrant/provisioning/requirements.txt"
       ansible.galaxy_role_file = "requirements.yml"
       ansible.galaxy_command = "ansible-galaxy install --role-file=%{role_file}"
       ansible.verbose = false
