--- a/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/backend/vars.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/backend/vars.yml
@@ -1,7 +1,7 @@
 ---
 
 backend_server_name: "{{ cookiecutter.dev_vm_hostname }}"
-backend_app_vagrant_mount: yes
+backend_app_vagrant_mount: true
 backend_app_gunicorn_worker_count: 4
 backend_app_gid: 1234
 backend_app_uid: 1234
