--- a/{{ cookiecutter.project_slug }}/provisioning/roles/base/tasks/yum_cron.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/base/tasks/yum_cron.yml
@@ -9,7 +9,7 @@
   systemd:
     name: yum-cron
     state: started
-    enabled: yes
+    enabled: true
 
 - name: configure yum-cron to apply updates automatically
   lineinfile:
