--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/django_management.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/django_management.yml
@@ -1,9 +1,9 @@
 ---
 {% raw %}
 - name: run database migrations
-  become: yes
+  become: true
   become_user: "{{ backend_app_user }}"
-  run_once: yes
+  run_once: true
   django_manage:
     command: "migrate --noinput"
     app_path: "{{ deploy_helper.current_path }}"
@@ -16,7 +16,7 @@
     msg: "{{ django_manage_migrate.out }}"
 
 - name: run collect static files
-  become: yes
+  become: true
   become_user: "{{ backend_app_user }}"
   django_manage:
     command: "collectstatic --clear --noinput"
